--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -65,7 +65,6 @@ body {
 }
 
 .artistName {
-    
     margin:0;
 }
 
@@ -92,6 +91,12 @@ body {
 
 .window-inner {
     padding:8px;
+}
+
+.full {
+    padding:0;
+    width:100%;
+    height:100%;
 }
 
 .window-inner p:first-child {
@@ -143,4 +148,35 @@ a.linksButton:active {
 
 a {
     color:#f9c2ca
+}
+
+#browserWindow {
+    background:#ccc;
+    flex:1;
+    font-family:'Times New Roman', Times, serif;
+    font-size:14px;
+    padding:8px;
+    overflow-y:scroll;
+    overflow-x:auto;
+}
+
+#browserWindow a {
+    color:#66D;
+}
+
+.browser-bar {
+    height:32px;
+    display:flex;
+    flex-direction:row;
+    justify-content:stretch;
+}
+
+.browser-bar .button-icon {
+    min-width: 0;
+}
+
+.browser-bar input[type="text"] {
+    flex:1;
+    height:auto;
+    padding:10px;
 }
